# web_homework8

./: pyproject.toml
part1/: models.py
part2/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py
