[tool.poetry]
name = "web-homework8"
version = "0.1.0"
description = ""
authors = ["PetroChulkov <114095841+PetroChulkov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_homework8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
faker = "^17.6.0"
pika = "^1.3.1"
redis = "^4.5.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
